# haskell_playground

./: .gitignore  README.md  chapter1-3_exercises.hs
Chapter4/: Chapter4.hs
chapter5/: Main.hs  Makefile  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  SimpleJSON.hs  mypretty.cabal
maths/: Expander.hs  Extractor.hs  Parser.hs  Tokens.hs  Tree.hs  maths.hs
webpage/my-project/: package.yaml
